Fix overflow-x scroll

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,14 +4,10 @@
   margin: 0;
 }
 
-html {
-  overflow-x: hidden;
-}
-
 html,
 body {
   max-width: 100vw;
-  /* overflow-x: hidden; */
+  overflow-x: clip;
   background-color: #161616;
   font-family:
     SUIT Variable,
